AM_CFLAGS = $(GLOBAL_CFLAGS)
AM_LDFLAGS = $(GLOBAL_LDFLAGS)
AM_LDADD = $(GLOBAL_LIBS)

bin_PROGRAMS = absinthe

absinthe_SOURCES = \
	absinthe.c \
	common.c \
	file.c \
	device.c \
	lockdown.c \
	mb2.c \
	afc.c \
	plist_extras.c \
	crashreporter.c \
	crashreportmover.c \
	crashreportcopy.c \
	crashreport.c \
	dictionary.c

absinthe_CFLAGS = $(AM_CFLAGS)
absinthe_LDFLAGS = $(AM_LDFLAGS)
absinthe_LDADD = $(AM_LDADD)
