AM_CFLAGS = $(GLOBAL_CFLAGS)
AM_LDFLAGS = $(GLOBAL_LDFLAGS)
AM_LDADD = $(GLOBAL_LIBS)

bin_PROGRAMS = absinthe

absinthe_SOURCES = \
	absinthe.c \
	jailbreak.c \
	common.c \
	file.c \
	backup.c \
	backup_file.c \
	mbdb.c \
	mbdb_record.c \
	device.c \
	lockdown.c \
	mb1.c \
	plist_extras.c \
	crashreporter.c \
	crashreportmover.c \
	crashreportcopy.c \
	crashreport.c \
	dictionary.c \
	dyldcache.c \
	dyldimage.c \
	dyldmap.c \
	macho.c \
	macho_segment.c \
	macho_symtab.c \
	macho_section.c \
	macho_command.c \
	architecture.c \
	idevicebackup2.c \
	fsgen.c \
	bpatch.c \
	bfile.c

absinthe_CFLAGS = $(AM_CFLAGS)
absinthe_LDFLAGS = $(AM_LDFLAGS)
absinthe_LDADD = $(AM_LDADD)
